--- a/scripts/SMD_chip_package_rlc-etc/SMD_packages.yaml
+++ b/scripts/SMD_chip_package_rlc-etc/SMD_packages.yaml
@@ -22,7 +22,7 @@ resistor_smaller_0603:
 
 resistor_smaller_0402:
     fp_lib_name: 'Resistor_SMD'
-    size_definitions: ['size_default_chip_smaller_0402.yaml']
+    size_definitions: ['size_default_chip_smaller_0402.yaml'] # IPC-SM-782 only gives chip sizes down to 0402
     ipc_reference: "ipc_spec_smaller_0603"
     prefix: 'R'
     description: 'Resistor SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
@@ -35,7 +35,6 @@ resistor_smaller_0402:
         heel_abs: -0.05 # additional heel reduction
 
 resistor_handsolder:
-    #ToDo: only generate > 0402
     fp_lib_name: 'Resistor_SMD'
     size_definitions: ['size_resistor_chip.yaml', 'size_resistor_chip_wide_body.yaml']
     ipc_reference: "ipc_spec_larger_or_equal_0603"
@@ -72,7 +71,7 @@ capacitor_smaller_0603:
 
 capacitor_smaller_0402:
     fp_lib_name: 'Capacitor_SMD'
-    size_definitions: ['size_default_chip_smaller_0402.yaml']
+    size_definitions: ['size_default_chip_smaller_0402.yaml'] # IPC-SM-782 only gives chip sizes down to 0402
     ipc_reference: "ipc_spec_smaller_0603"
     prefix: 'C'
     description: 'Capacitor SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
@@ -85,7 +84,6 @@ capacitor_smaller_0402:
         heel_abs: -0.05 # additional heel reduction
 
 capacitor_handsolder:
-    #ToDo: only generate > 0402
     fp_lib_name: 'Capacitor_SMD'
     size_definitions: ['size_capacitor_chip.yaml']
     ipc_reference: "ipc_spec_larger_or_equal_0603"
@@ -125,7 +123,7 @@ capacitor_tantal_handsolder:
 
 inductor:
     fp_lib_name: 'Inductor_SMD'
-    size_definitions: ['size_default_chip.yaml', 'size_inductor.yaml'] # inductor size definitions overwrite generic ones
+    size_definitions: ['size_default_chip.yaml', 'size_inductor.yaml'] # specific inductor size definitions overwrite generic ones, and IPC doesn't give 0402 or 0603 inductor chip dimensions
     ipc_reference: "ipc_spec_larger_or_equal_0603"
     prefix: 'L'
     description: 'Inductor SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
@@ -147,7 +145,7 @@ inductor_smaller_0603:
 
 inductor_smaller_0402:
     fp_lib_name: 'Inductor_SMD'
-    size_definitions: ['size_default_chip_smaller_0402.yaml']
+    size_definitions: ['size_default_chip_smaller_0402.yaml'] # IPC-SM-782 only gives chip sizes down to 0402
     ipc_reference: "ipc_spec_smaller_0603"
     prefix: 'L'
     description: 'Inductor SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
@@ -160,7 +158,6 @@ inductor_smaller_0402:
         heel_abs: -0.05 # additional heel reduction
 
 inductor_handsolder:
-    #ToDo: only generate > 0402
     fp_lib_name: 'Inductor_SMD'
     size_definitions: ['size_default_chip.yaml', 'size_inductor.yaml'] # inductor size definitions overwrite generic ones
     ipc_reference: "ipc_spec_larger_or_equal_0603"
@@ -199,7 +196,7 @@ diode_smaller_0603:
 
 diode_smaller_0402:
     fp_lib_name: 'Diode_SMD'
-    size_definitions: ['size_default_chip_smaller_0402.yaml']
+    size_definitions: ['size_default_chip_smaller_0402.yaml'] # IPC-SM-782 only gives chip sizes down to 0402
     ipc_reference: "ipc_spec_smaller_0603"
     prefix: 'D'
     description: 'Diode SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
@@ -262,10 +259,9 @@ led_smaller_0603:
     polarization_mark: 'True'
     suffix: ""
 
-
 led_smaller_0402:
     fp_lib_name: 'LED_SMD'
-    size_definitions: ['size_default_chip_smaller_0402.yaml']
+    size_definitions: ['size_default_chip_smaller_0402.yaml'] # IPC-SM-782 only gives chip sizes down to 0402
     ipc_reference: "ipc_spec_smaller_0603"
     prefix: 'LED'
     description: 'LED SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
@@ -328,7 +324,7 @@ fuse_smaller_0603:
 
 fuse_smaller_0402:
     fp_lib_name: 'Fuse'
-    size_definitions: ['size_default_chip_smaller_0402.yaml']
+    size_definitions: ['size_default_chip_smaller_0402.yaml'] # IPC-SM-782 only gives chip sizes down to 0402
     ipc_reference: "ipc_spec_smaller_0603"
     prefix: 'Fuse'
     description: 'Fuse SMD {code_imperial:s} ({code_metric:s} Metric), square (rectangular) end terminal, IPC_7351 nominal, {size_info:s}, generated with kicad-footprint-generator'
