--- a/scripts/SMD_chip_package_rlc-etc/size_definitions/size_capacitor_chip_smaller_0603.yaml
+++ b/scripts/SMD_chip_package_rlc-etc/size_definitions/size_capacitor_chip_smaller_0603.yaml
@@ -7,8 +7,9 @@ C_0402:
     body_width:
       minimum: 0.4
       maximum: 0.6
-    terminator_spacing_min: 0.3
-    terminator_spacing_max: 0.65
+    terminator_spacing:
+      minimum: 0.3
+      maximum: 0.65
     size_info: '(Body size source: IPC-SM-782 page 76, https://www.pcb-3d.com/wordpress/wp-content/uploads/ipc-sm-782a_amendment_1_and_2.pdf)'
 
 C_0504:
