--- a/scripts/SMD_chip_package_rlc-etc/size_definitions/size_resistor_chip_smaller_0603.yaml
+++ b/scripts/SMD_chip_package_rlc-etc/size_definitions/size_resistor_chip_smaller_0603.yaml
@@ -7,6 +7,7 @@ R_0402:
     body_width:
       minimum: 0.48
       maximum: 0.6
-    terminator_spacing_min: 0.4
-    terminator_spacing_max: 0.7
+    terminator_spacing:
+      minimum: 0.4
+      maximum: 0.7
     size_info: '(Body size source: IPC-SM-782 page 72, https://www.pcb-3d.com/wordpress/wp-content/uploads/ipc-sm-782a_amendment_1_and_2.pdf)'
