--- a/scripts/SMD_chip_package_rlc-etc/size_definitions/size_default_chip.yaml
+++ b/scripts/SMD_chip_package_rlc-etc/size_definitions/size_default_chip.yaml
@@ -69,7 +69,7 @@ SMD_1210:
       maximum: 2.32
     size_info: '(Body size source: http://www.tortai-tech.com/upload/download/2011102023233369053.pdf)'
 
-#Could not find any diode or fuse in this body size
+#Could not find any LED, diode or fuse in this body size
 # SMD_1806:
     # code_imperial: "1806"
     # code_metric: "4516"
