--- a/scripts/SMD_chip_package_rlc-etc/size_definitions/resistor_chip_wide_body.yaml
+++ b/scripts/SMD_chip_package_rlc-etc/size_definitions/resistor_chip_wide_body.yaml
@@ -17,16 +17,16 @@ R_0815:
     code_imperial: "0815"
     code_metric: "2038"
     body_length:
-        nominal: 2.15
+        nominal: 2.3
         tolerance: 0.2
     body_width:
         nominal: 3.75
-        tolerance: 0.25
+        tolerance: 0.3
     terminal_length:
-        nominal: 0.7
-        tolerance: 0.25
+        nominal: 0.5
+        tolerance: 0.2
     ipc_reference: "ipc_spec_larger_or_equal_0603"
-    size_info: '(Body size source: http://www.yageo.com/documents/recent/PYu-PRPFPH_521_RoHS_L_0.pdf)'
+    size_info: '(Body size source: https://www.bourns.com/docs/Product-Datasheets/CRK.pdf)'
 
 R_1020:
     code_imperial: "1020"
