--- a/scripts/SMD_chip_package_rlc-etc/size_definitions/resistor_chip_wide_body.yaml
+++ b/scripts/SMD_chip_package_rlc-etc/size_definitions/resistor_chip_wide_body.yaml
@@ -17,16 +17,19 @@ R_0815:
     code_imperial: "0815"
     code_metric: "2038"
     body_length:
-        nominal: 2.3
+        nominal: 2.0
         tolerance: 0.2
     body_width:
         nominal: 3.75
         tolerance: 0.3
     terminal_length:
-        nominal: 0.5
+        nominal: 0.4
         tolerance: 0.2
     ipc_reference: "ipc_spec_larger_or_equal_0603"
-    size_info: '(Body size source: https://www.bourns.com/docs/Product-Datasheets/CRK.pdf)'
+    size_info: '(Body size source: https://www.susumu.co.jp/common/pdf/n_catalog_partition07_en.pdf)'
+	# originally used https://www.vishay.com/docs/20019/rcwe.pdf but that part is gone
+	# https://www.bourns.com/docs/Product-Datasheets/CRK.pdf has a strange 2.3mm nominal width
+	# https://www.seielect.com/catalog/sei-csr_csrn.pdf nearly matches Sumusu so went with those
 
 R_1020:
     code_imperial: "1020"
