Use terminal length for 0402 R

--- a/scripts/SMD_chip_package_rlc-etc/size_definitions/resistor_chip_smaller_0603.yaml
+++ b/scripts/SMD_chip_package_rlc-etc/size_definitions/resistor_chip_smaller_0603.yaml
@@ -7,7 +7,7 @@ R_0402:
     body_width:
       minimum: 0.48
       maximum: 0.6
-    terminator_spacing:
-      minimum: 0.4
-      maximum: 0.7
+    terminal_length:
+        minimum: 0.1
+        maximum: 0.3
     size_info: '(Body size source: IPC-SM-782 page 72, https://www.pcb-3d.com/wordpress/wp-content/uploads/ipc-sm-782a_amendment_1_and_2.pdf)'
