Update dimension format for tantalum caps
- Removed individual IPC reference since they all are the same and this is in the part definition
- Also removed missing and unneeded dimensions which were commented out

--- a/scripts/chip_molded/size_definitions/capacitor_tantalum.yaml
+++ b/scripts/chip_molded/size_definitions/capacitor_tantalum.yaml
@@ -3,15 +3,15 @@ C_1608-08:
     # size   | 1,6 x 0,8 x 0,8 mm
     #code_letter: 'Kemet-—'
     code_letter: 'AVX-J'
-    body_length: 1.6
-    body_length_tol: 0.2
-    body_width: 0.85
-    body_width_tol: 0.2
-    #terminator_spacing_min:
-    #terminator_spacing_max:
-    terminal_length: 0.5
-    terminal_length_tol: 0.1
-    ipc_reference: "ipc_spec_tantalum"
+    body_length:
+        nominal: 1.6
+        tolerance: 0.2
+    body_width:
+        nominal: 0.85
+        tolerance: 0.2
+    terminal_length:
+        nominal: 0.5
+        tolerance: 0.1
     size_info: '(Body size from: https://www.vishay.com/docs/48064/_t58_vmn_pt0471_1601.pdf)'
 
 C_1608-10:
@@ -19,15 +19,15 @@ C_1608-10:
     # size   | 1,6 x 0,85 x 1,05 mm
     #code_letter: 'Kemet-—'
     code_letter: 'AVX-L'
-    body_length: 1.6
-    body_length_tol: 0.2
-    body_width: 0.85
-    body_width_tol: 0.2
-    #terminator_spacing_min:
-    #terminator_spacing_max:
-    terminal_length: 0.5
-    terminal_length_tol: 0.1
-    ipc_reference: "ipc_spec_tantalum"
+    body_length:
+        nominal: 1.6
+        tolerance: 0.2
+    body_width:
+        nominal: 0.85
+        tolerance: 0.2
+    terminal_length:
+        nominal: 0.5
+        tolerance: 0.1
     size_info: '(Body size from: https://www.vishay.com/docs/48064/_t58_vmn_pt0471_1601.pdf)'
 
 C_2012-12:
@@ -41,15 +41,12 @@ C_2012-12:
     body_width:
         nominal: 1.25
         tolerance: 0.2
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 0.5
         tolerance: 0.2
     terminal_width:
         nominal: 0.9
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: https://www.vishay.com/docs/40182/tmch.pdf)'
 
 C_2012-15:
@@ -63,15 +60,12 @@ C_2012-15:
     body_width:
         nominal: 1.25
         tolerance: 0.2
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 0.5
         tolerance: 0.2
     terminal_width:
         nominal: 0.9
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: https://www.vishay.com/docs/40182/tmch.pdf)'
 
 C_3216-10:
@@ -85,15 +79,12 @@ C_3216-10:
     body_width:
         nominal: 1.6
         tolerance: 0.2
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 0.8
         tolerance: [0.3, 0.2]
     terminal_width:
         nominal: 1.2
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_3216-12:
@@ -107,15 +98,12 @@ C_3216-12:
     body_width:
         nominal: 1.6
         tolerance: 0.2
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 0.8
         tolerance: [0.3, 0.2]
     terminal_width:
         nominal: 1.2
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_3216-18:
@@ -129,15 +117,12 @@ C_3216-18:
     body_width:
         nominal: 1.6
         tolerance: 0.2
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 0.8
         tolerance: [0.3, 0.2]
     terminal_width:
         nominal: 1.2
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_3528-12:
@@ -151,15 +136,12 @@ C_3528-12:
     body_width:
         nominal: 2.8
         tolerance: 0.2
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 0.8
         tolerance: [0.3, 0.1]
     terminal_width:
         nominal: 2.2
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_3528-15:
@@ -173,15 +155,12 @@ C_3528-15:
     body_width:
         nominal: 2.8
         tolerance: 0.2
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 0.8
         tolerance: [0.3, 0.1]
     terminal_width:
         nominal: 2.2
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_3528-21:
@@ -195,15 +174,12 @@ C_3528-21:
     body_width:
         nominal: 2.8
         tolerance: 0.2
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 0.8
         tolerance: [0.3, 0.1]
     terminal_width:
         nominal: 2.2
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_6032-15:
@@ -217,15 +193,12 @@ C_6032-15:
     body_width:
         nominal: 3.2
         tolerance: 0.2
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 1.3
         tolerance: 0.3
     terminal_width:
         nominal: 2.2
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_6032-20:
@@ -239,15 +212,12 @@ C_6032-20:
     body_width:
         nominal: 3.2
         tolerance: 0.2
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 1.3
         tolerance: 0.3
     terminal_width:
         nominal: 2.2
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_6032-28:
@@ -261,15 +231,12 @@ C_6032-28:
     body_width:
         nominal: 3.2
         tolerance: 0.3
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 1.3
         tolerance: 0.3
     terminal_width:
         nominal: 2.2
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_7132-20:
@@ -288,7 +255,6 @@ C_7132-20:
     terminator_spacing:
         nominal: 3.6
         tolerance: 0.6
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://datasheets.avx.com/F72-F75.pdf)'
 
 C_7132-28:
@@ -307,7 +273,6 @@ C_7132-28:
     terminator_spacing:
         nominal: 3.6
         tolerance: 0.6
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://datasheets.avx.com/F72-F75.pdf)'
 
 C_7260-15:
@@ -326,7 +291,6 @@ C_7260-15:
     terminal_length:
         nominal: 1.3
         tolerance: 0.4
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://datasheets.avx.com/F72-F75.pdf)'
 
 C_7260-20:
@@ -345,7 +309,6 @@ C_7260-20:
     terminal_length:
         nominal: 1.3
         tolerance: 0.4
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://datasheets.avx.com/F72-F75.pdf)'
 
 C_7260-28:
@@ -364,7 +327,6 @@ C_7260-28:
     terminal_length:
         nominal: 1.3
         tolerance: 0.4
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://datasheets.avx.com/F72-F75.pdf)'
 
 C_7260-38:
@@ -383,7 +345,6 @@ C_7260-38:
     terminal_length:
         nominal: 1.3
         tolerance: 0.4
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://datasheets.avx.com/F72-F75.pdf)'
 
 C_7343-15:
@@ -397,14 +358,12 @@ C_7343-15:
     body_width:
         nominal: 4.3
         tolerance: 0.3
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 1.3
         tolerance: 0.3
-    terminal_width_min: 2.3
-    terminal_width_max: 2.5
-    ipc_reference: "ipc_spec_tantalum"
+    terminal_width:
+      minimum: 2.3
+      maximum: 2.5
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_7343-20:
@@ -418,15 +377,12 @@ C_7343-20:
     body_width:
         nominal: 4.3
         tolerance: 0.3
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 1.3
         tolerance: 0.3
     terminal_width:
         nominal: 2.4
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_7343-30:
@@ -440,15 +396,12 @@ C_7343-30:
     body_width:
         nominal: 4.3
         tolerance: 0.3
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 1.3
         tolerance: 0.3
     terminal_width:
         nominal: 2.4
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_7343-31:
@@ -462,15 +415,12 @@ C_7343-31:
     body_width:
         nominal: 4.3
         tolerance: 0.3
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 1.3
         tolerance: 0.3
     terminal_width:
         nominal: 2.4
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_7343-40:
@@ -484,15 +434,12 @@ C_7343-40:
     body_width:
         nominal: 4.3
         tolerance: 0.3
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 1.3
         tolerance: 0.3
     terminal_width:
         nominal: 2.4
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_7343-43:
@@ -506,15 +453,12 @@ C_7343-43:
     body_width:
         nominal: 4.3
         tolerance: 0.3
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 1.3
         tolerance: 0.3
     terminal_width:
         nominal: 2.4
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_7360-38:
@@ -528,15 +472,12 @@ C_7360-38:
     body_width:
         nominal: 6.0
         tolerance: 0.3
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 1.3
         tolerance: 0.3
     terminal_width:
         nominal: 4.1
         tolerance: 0.1
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://www.kemet.com/Lists/ProductCatalog/Attachments/253/KEM_TC101_STD.pdf)'
 
 C_7361-38:
@@ -550,15 +491,12 @@ C_7361-38:
     body_width:
         nominal: 6.1
         tolerance: [0.1, 0.2]
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 1.3
         tolerance: [0.2, 0.3]
     terminal_width:
         nominal: 3.1
         tolerance: 0.2
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://datasheets.avx.com/NOS.pdf)'
 
 C_7361-438:
@@ -572,13 +510,10 @@ C_7361-438:
     body_width:
         nominal: 6.1
         tolerance: [0.1, 0.2]
-    #terminator_spacing_min:
-    #terminator_spacing_max:
     terminal_length:
         nominal: 1.3
         tolerance: [0.2, 0.3]
     terminal_width:
         nominal: 3.1
         tolerance: 0.2
-    ipc_reference: "ipc_spec_tantalum"
     size_info: '(Body size from: http://datasheets.avx.com/NOS.pdf)'
